--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                <img src="img/ava.jpg" alt="">
             </div>
             <div class="info">
-               <h4 class="name">Руслан Шевцов</h4><small class="job">Front-end web developer</small>
+               <h4 class="name">Руслан Шевdaaцов</h4><small class="job">Front-end web developer</small>
             </div>
          </div>
          <div class="about">
