--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <ul>
                <li><span>Front-end web developer</span><small>Июнь 2021 - По сей день</small></li>
                <li><span>Верстальщик лендингов<br>в яндекс</span><small>Mай 2020 - Ноябрь 2020 </small></li>
-               <li><span>Начал изучение</span><small>Август 2019 - Май 2020</small></li>
+               <li><span>Помощник по верстке в яндекс</span><small>Август 2019 - Май 2020</small></li>
             </ul>
          </div>
          <div class="edu">
